httpserver/httpserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpserver
spec:
  terminationGracePeriodSeconds: 60
  containers:
    - name: httpserver
      image: vinceleung/httpserver:1.0.1
      #QoS Class: Burstable
      resources:
        limits:
          memory: 1Gi
          cpu: 2
        requests:
          memory: 512Mi
          cpu: 1
      ### 就绪状态检查
      readinessProbe:
        httpGet:
          ### this probe will fail with 404 error code
          ### only httpcode between 200-400 is retreated as success
          path: /healthz
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
        successThreshold: 2
      ### 探活
      livenessProbe:
        httpGet:
          ### this probe will fail with 404 error code
          ### only httpcode between 200-400 is retreated as success
          path: /healthz
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 10
        timeoutSeconds: 3
        successThreshold: 1
        failureThreshold: 1
      ### 应用配置--环境变量例子
